Issue #20141: Improved Argument Clinic's support for the PyArg_Parse "O!" format unit.